--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
     <properties>
         <java.version>11</java.version>
         <javafx-weaver.version>1.3.0</javafx-weaver.version>
-        <javafx.version>15</javafx.version>
+<!--        <javafx.version>15.0.1</javafx.version>-->
+        <javafx.version>16-ea+7</javafx.version>
     </properties>
     <dependencies>
         <dependency>
