--- a/pom.xml
+++ b/pom.xml
@@ -16,31 +16,19 @@
     <properties>
         <java.version>11</java.version>
         <javafx-weaver.version>1.3.0</javafx-weaver.version>
-<!--        <javafx.version>15.0.1</javafx.version>-->
-        <javafx.version>16-ea+7</javafx.version>
+        <javafx.version>15.0.1</javafx.version>
+<!--        <javafx.version>16-ea+7</javafx.version>-->
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <scope>runtime</scope>
         </dependency>
-
-        <!-- JavaFX -->
-
-<!--        <dependency>-->
-<!--            <groupId>org.openjfx</groupId>-->
-<!--            <artifactId>javafx</artifactId>-->
-<!--            <version>${javafx.version}</version>-->
-<!--            <type>pom</type>-->
-<!--        </dependency>-->
-
-
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
@@ -51,27 +39,16 @@
             <artifactId>javafx-fxml</artifactId>
             <version>${javafx.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-graphics</artifactId>
-            <version>${javafx.version}</version>
-        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.openjfx</groupId>-->
-<!--            <artifactId>javafx-fxml</artifactId>-->
+<!--            <artifactId>javafx-graphics</artifactId>-->
 <!--            <version>${javafx.version}</version>-->
-<!--            <scope>provided</scope>-->
 <!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>net.rgielen</groupId>-->
-<!--            <artifactId>javafx-weaver-spring</artifactId>-->
-<!--            <version>${javafx-weaver.version}</version>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>net.rgielen</groupId>
             <artifactId>javafx-weaver-spring-boot-starter</artifactId>
@@ -82,10 +59,20 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.5</version>
+                <configuration>
+                    <mainClass>HelloFX</mainClass>
+                </configuration>
             </plugin>
         </plugins>
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--            </plugin>-->
+<!--        </plugins>-->
     </build>
 
 </project>
